# claude-pilot

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.githooks/: pre-commit
.github/: renovate.json
.github/hooks/: pre-commit
.github/workflows/: release-dev.yml  release.yml  supply-chain.yml
console/: package.json  tsconfig.json  vite.config.ts
console/src/cli/: hook-command.ts
console/src/sdk/: prompts.ts
console/src/services/: worker-service.ts  worker-types.ts
console/src/shared/: SettingsDefaultsManager.ts  bash-readonly-filter.ts  displayed-sections.ts  hook-constants.ts  paths.ts  transcript-parser.ts  worker-utils.ts  wsl.ts
console/src/utils/: claude-session-cleanup.ts  logger.ts  pilot-spawn.ts  project-name.ts
console/tests/: settings-routes.test.ts
console/tests/annotation/: annotation-store.test.ts  code-review.test.ts  parser.test.ts  plan-annotator-persistence.test.tsx  use-annotation.test.ts
console/tests/cli/: codex-adapter.test.ts  codex-agent-filter.test.ts  context-handler-plan.test.ts  hook-command-failopen.test.ts
console/tests/domain/: mode-manager.test.ts
console/tests/hooks/: use-license-optimistic.test.tsx  useExtensions.test.ts  useSettings-save-payload.test.tsx  useSettings.test.ts  useStats.test.ts  useUsage.test.ts
console/tests/sdk/: prompts.test.ts
console/tests/server/: license-routes.test.ts  session-cleanup-timer.test.ts  session-persistence.test.ts
console/tests/shared/: bash-readonly-filter.test.ts  settings-defaults-manager-output.test.ts  settings-defaults-skip-tools.test.ts  timeline-formatting.test.ts  transcript-parser.test.ts  wsl.test.ts
console/tests/sharing/: annotation-store-scan.test.ts  compress.test.ts  crypto.test.ts  dismiss-feedback-routing.test.ts  feedback-accept-reject.test.ts  feedback-panel.test.ts  feedback-poll-scheduler.test.ts  share-from-review.test.ts  share-persistence.test.ts  share-spec-button.test.ts  shareRoutes.test.ts  shareStore.test.ts  shared-spec-view.test.ts  sharing.test.ts  sse-context.test.tsx
console/tests/ui/: Changes-pickActivePlanPath.test.ts  ChangesNavigation.test.ts  ChangesView.test.ts  CodeReviewPanel-diffFilter.test.ts  DiffPanel.test.ts  ExtensionDetail.test.ts  ExtensionsGrid.test.ts  ExtensionsView.test.ts  FileList.test.ts  codex-session-detail.test.ts  dashboard-agent-badges.test.tsx  dashboard-project-filter.test.ts  error-boundary.test.tsx  license-badge.test.ts  memories-search.test.ts  model-routing-info.test.ts  motion.test.ts  project-context.test.ts  project-selector.test.ts  search-removal.test.ts  skeleton.test.ts  spec-delete-selection.test.ts  spec-section-rendering.test.ts  spec-workflow-settings-copy.test.ts  stats-grid-spec-cards.test.ts  teams-navigation.test.ts  topbar-active-specs.test.ts  usage-view.test.ts  use-stats-spec-metrics.test.ts  useNotifications.test.ts  (+4 more)
docs/: spec-smoke-test.md
docs/docusaurus/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/site/: build-all.sh  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite-plugin-indexnow.ts  vite-plugin-sitemap.ts  vite.config.ts
installer/: __init__.py  cli.py  downloads.py  manifest.py  platform_utils.py  skill_builder.py  ui.py  upstreams.yaml
installer/steps/: claude_files.py  codex_files.py  config_migration.py  dependencies.py  finalize.py  pilot_files.py  prerequisites.py  shell_config.py  vscode_extensions.py
launcher/: __init__.py  agent_runtime.py  auth.py  banner.py  bot.py  build.py  cli.py  codegraph.py  config.py  config_schema.py  customize.py  customize_overlays.py  model_config.py  model_pin.py  session.py  settings_injector.py  skill_builder.py  skill_hashes.py  updater.py  worktree.py  wrapper.py
launcher/statusline/: formatter.py  providers.py  widgets.py
pilot/: .mcp.json  package.json  plugin.json  settings.json
pilot/agents/: changes-review-codex.md  changes-review.md  spec-review-codex.md  spec-review.md  web-search-agent.md
pilot/commands/: create-skill.md  setup-rules.md  spec-bugfix-plan.md  spec-bugfix-verify.md  spec-implement.md  spec-plan.md  spec-verify.md  spec.md  sync.md
pilot/hooks/: auto_approve_plan.py  cc_skill_sync.py  codegraph_init.py  codex_hooks.json  codex_skill_sync.py  context_monitor.py  credential_scanner.py  file_checker.py  hooks.json  license_check.py  plan_mode_tracker.py  post_compact_restore.py  session_announcements.py  session_end.py  spec_mode_guard.py  spec_stop_guard.py  tool_redirect.py  tool_token_saver.py
pilot/rules/: agent-browser.md  browser-automation.md  cli-tools.md  code-review-reception.md  context-mode.md  development-practices.md  documentation-sync.md  mcp-servers.md  research-tools.md  response-shape.md  security-credentials.md  skill-sharing.md  standards-backend.md  standards-blazor.md  standards-dotnet.md  standards-frontend.md  task-and-workflow.md  testing.md  verification.md
pilot/scripts/: context-generator.cjs  mcp-server.cjs  worker-service.cjs
pilot/ui/: ExtensionsView.js  PlanAnnotator.js  Spinner.js  compress.js  index.html  index.js  index2.js  index3.js  index4.js  index5.js  useAnnotation.js  vendor-charts.js  vendor-diff.js  vendor-markdown.js  viewer-bundle.js  viewer.css  viewer2.css
scripts/: check_manifest_drift.py
(+655 files in other folders)
