[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["launcher*", "installer*"]

[project]
name = "pilot-shell"
version = "1.0.0"
description = "Pilot Shell"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "rich>=14.0.0",
    "platformdirs>=4.3.6",
    "cryptography>=48.0.1",
    "Cython>=3.0.0",
    "setuptools>=61.0",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "ruff>=0.12.3",
    "pytest>=8.3.3",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "vulture>=2.14",
    "deadcode>=2.4.1",
    "tox>=4.28.4",
    "build>=1.3.0",
    "hypothesis>=6.0",
    "import-linter>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["installer", "launcher", "."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = [
    "launcher/tests",
    "installer/tests",
    "pilot/hooks/tests",
    "pilot/skills/benchmark/tests",
    "pilot/skills/ask-codex/tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
norecursedirs = ["target/**", ".venv/**", "**/.tox/**", "**/build/**", "misc/", ".hypothesis"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["target/**", ".venv/**", "**/.tox/**", "**/build/**", "misc/"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "ERA",     # eradicate (detect commented-out code)
    "B",       # flake8-bugbear (likely bugs; noisy codes neutralized in `ignore`)
    "PLR0913", # too-many-arguments (max 6)
    "PLR0915", # too-many-statements (max 60)
]
ignore = [
    "D100",
    "D104",
    "E902",
    "E501",
    "F401",
    "F403",
    "F405",
    "C901",
    "B905",
    "N803",
    "N806",
    "N815",
    "W391",
    "W292",
    "SIM105",
    "B008",
    "B006",
    "F821",
    "B012",
    "F541",
    "C408",
    "B007",
    "B904",
    "C416",
    "B017",
    "SIM108",
    "SIM113",
]

[tool.ruff.lint.pylint]
max-args = 6
max-statements = 60

[tool.ruff.lint.per-file-ignores]
"launcher/tests/*" = ["D", "UP", "PLR0913", "PLR0915"]
"installer/tests/*" = ["D", "UP", "PLR0913", "PLR0915"]
"installer/steps/*" = ["PLR0913", "PLR0915"]

[tool.vulture]
# Tests excluded: pytest-injected mocks/fixtures read like unused vars to vulture.
exclude = [".venv/**", "target/**", "**/.tox/**", "**/build/**", "**/tests/**"]
min_confidence = 80
paths = ["installer", "launcher", "pilot/hooks"]

[tool.deadcode]
# Dead-code gate enforced in pre-commit + CI (see .pre-commit-config.yaml / release workflows).
# Tests/dist excluded: pytest fixtures and generated Cython scaffolding read as unused.
exclude = ["*/tests/*", "*/dist/*", ".venv/**", "target/**", "**/build/**"]
# Curated false-positive allowlist — every entry is reachable, just not via a plain
# in-module read that deadcode's static analysis can follow:
ignore_names = [
    # Documented-but-unused config allowlist (informational; validator ignores unknown keys).
    "FOREIGN_TOP_LEVEL_KEYS",
    # Attribute assignments on stdlib objects deadcode can't attribute to a definition.
    "row_factory",      # sqlite3.Connection.row_factory
    "check_hostname",   # ssl.SSLContext.check_hostname
    "verify_mode",      # ssl.SSLContext.verify_mode
    # @dataclass wire-format fields: populated from Claude Code / upstream JSON+YAML and
    # read by external consumers, so "never read internally" is by design, not dead code.
    "is_local_install",        # InstallContext (read via ctx.is_local_install in cli.py)
    "last_audited",            # UpstreamEntry (manifest schema field)
    "transcript_path",         # StatusData (Claude Code statusline stdin schema)
    "context_remaining_pct",
    "total_input_tokens",
    "total_output_tokens",
    "duration_ms",
]

[tool.coverage.run]
# Branch coverage exposes untested error/edge branches; applies wherever --cov runs.
branch = true

[tool.basedpyright]
include = [
    "installer",
    "launcher",
    "pilot/skills/benchmark/scripts",
    "pilot/skills/benchmark/tests",
    "pilot/skills/ask-codex/scripts",
    "pilot/skills/ask-codex/tests",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "target/**",
    ".venv/**",
    "**/.tox/**",
    "**/build/**",
    "misc/",
]
extraPaths = ["pilot/hooks", "pilot/skills/benchmark"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportUnknownMemberType = false
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportImplicitRelativeImport = false

[tool.importlinter]
# Mechanically enforce the documented launcher ⊥ installer boundary: launcher is
# Cython-compiled into a standalone binary, installer runs as its own package —
# neither may import the other (see .claude/rules/pilot-shell-package-boundaries.md).
root_packages = ["launcher", "installer"]

[[tool.importlinter.contracts]]
name = "launcher and installer are independent"
type = "independence"
modules = ["launcher", "installer"]
